--- a/application/docker/nginx/conf.d/default.conf
+++ b/application/docker/nginx/conf.d/default.conf
@@ -1,7 +1,7 @@
 # nginx-proxy version : 1.3.1-2-gffc8b27
 # Networks available to the container running docker-gen (which are assumed to
 # match the networks available to the container running nginx):
-#     scrapping_network
+#     fmdt_development_network
 # If we receive X-Forwarded-Proto, pass it through; otherwise, pass along the
 # scheme used to connect to this server
 map $http_x_forwarded_proto $proxy_x_forwarded_proto {
@@ -96,34 +96,4 @@ server {
         return 444;
     }
     return 503;
-}
-# fmdt.test/
-upstream fmdt.test {
-    # Container: scrapping-service
-    #     networks:
-    #         scrapping_network (reachable)
-    #     IP address: 172.19.0.7
-    #     exposed ports: 8080/tcp 9000/tcp
-    #     default port: 80
-    #     using port: 80
-    server 172.19.0.7:80;
-}
-server {
-    server_name fmdt.test;
-    access_log /var/log/nginx/access.log vhost;
-    listen 80 ;
-    listen 443 ssl http2 ;
-    # No certificate found for this vhost, so force nginx to emit a TLS error if
-    # the client connects via https.
-    ssl_ciphers aNULL;
-    set $empty "";
-    ssl_certificate data:$empty;
-    ssl_certificate_key data:$empty;
-    if ($https) {
-        return 444;
-    }
-    location / {
-        proxy_pass http://fmdt.test;
-        set $upstream_keepalive false;
-    }
 }
